# insurance-ml-docker

./: Dockerfile  InsuranceCompany.ipynb  README.md  docker-compose.yml
app/: main.py  pyproject.toml
app/templates/: home.html
